# suno_mv

./: .gitignore  AGENTS.md  README.md  main.js  package-lock.json  package.json  setting.json  suno_mv.js
.codex/environments/: environment.toml
contracts/: browser_bridge.spec.yaml  suno_asset_payload.spec.yaml  suno_metadata_payload.spec.yaml
docs/: codex_workflow.md
docs/adr/: 0001-local-brouser-bridge.md  ADR-001-browser-owned-suno-authentication.md  ADR-002-deprecate-desktop-suno-credentials.md
docs/architecture/: suno_local_bridge.md
docs/implementation/: browser-bridge-http.md  browser-bridge-tauri-integration.md
docs/protocol/: suno_local_bridge.yaml
docs/research/: suno-internal-api-observations.md  suno-metadata-fields.md  suno-model-identifiers.md  upstream-manual-review.md
docs/reviews/: 2026-07-15-browser-bridge-http-review.md  2026-07-15-codex-implementation-plan.md
public/: index.html  renderer.js
src/: main.js  preload.js  renderer.js  suno_mv.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/bridge/: http.rs  mod.rs  protocol.rs  session.rs  transport.rs
src-tauri/tests/: bridge_protocol.rs
test/: renderer.test.js  suno_mv.test.js
tests/: renderer.test.js
workers/playwright-suno/: README.md
