[package]
name = "suno-mv"
version = "0.1.0"
description = "Suno MV Maker"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tokio = { version = "1", features = ["process", "io-util", "sync", "rt-multi-thread", "fs", "time"] }
reqwest = { version = "0.12", features = ["json", "stream", "cookies"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
base64 = "0.22"
