[package]
name = "suno-mv-tauri"
version = "0.1.0"
edition = "2021"

[lib]
name = "suno_mv_tauri_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
ureq = "2"
